// Copyright 2022 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.feature;
option go_package = "github.com/bucketeer-io/bucketeer/proto/feature";

import "proto/feature/variation.proto";
import "proto/feature/reason.proto";

message Evaluation {
  string id = 1;
  string feature_id = 2;
  int32 feature_version = 3;
  string user_id = 4;
  string variation_id = 5;
  Variation variation = 6 [deprecated = true];
  Reason reason = 7;
  string variation_value = 8;
}

message UserEvaluations {
  enum State {
    QUEUED = 0;
    PARTIAL = 1;
    FULL = 2;
  }
  string id = 1 [deprecated = true];
  repeated Evaluation evaluations = 2;
  int64 created_at = 3;
  repeated string archived_feature_ids = 4;
  bool force_update = 5;
}
